removing scrollbar bug

--- a/src/components/AddItemPage/styles.sass
+++ b/src/components/AddItemPage/styles.sass
@@ -1,15 +1,15 @@
 @import '../../styles/variables.sass'
 
 .addItemWrapper
-  transition: opacity .7s cubic-bezier(.82,0,.12,1)
   opacity: 0
+  transition: opacity .7s cubic-bezier(.82,0,.12,1)
   .hider
     position: fixed
     top: 0
     left: 0
     width: 100%
     height: 100%
-    z-index: 999
+    z-index: 999999
     +hider-gradient
 
   .modal
@@ -23,8 +23,8 @@
     left: 50%
     border: solid 1px $modal-border-color
     box-shadow: 0 4px 29px rgba(0,0,0,.22), 0 0 0 1px rgba(0,0,0,.04)
-    transform: translate(-50%, -30%)
-    z-index: 99999
+    transform: translate(-50%, 0%)
+    z-index: 9999999
     box-sizing: border-box
     opacity: 0
     transition: transform .5s cubic-bezier(.82,0,.12,1), opacity .6s cubic-bezier(.82,0,.12,1)
