--- a/src/styles/global.sass
+++ b/src/styles/global.sass
@@ -184,3 +184,13 @@ input
   width: 100%
   &:invalid
     box-shadow: none
+
+.modal-opened
+  overflow: hidden
+
+.scrollbar-measure
+  width: 100px !important
+  height: 100px !important
+  overflow-y: scroll
+  position: absolute
+  top: -9999px
